--- a/modules/com/app/views/com/config_items/index.html.erb
+++ b/modules/com/app/views/com/config_items/index.html.erb
@@ -20,13 +20,20 @@
         <table class="split-table">
           <tr>
             <td>
-              <%= render :partial =>"tree_sidebar", :locals =>{:tree_url => url_for(:controller => "com/config_classes", :action=>"get_class_tree",  :format=>:json),
+              <%= render :partial =>"/irm/common/tree_sidebar_template", :locals =>{:tree_url => url_for(:controller => "com/config_classes", :action=>"get_class_tree", :format=>:json),
                                                                            :target_table => "config_items",
                                                                            :tree_id => "tree-div",
                                                                            :title => t(:label_com_config_class),
                                                                            :root_text => t(:label_com_config_item_all_class),
                                                                            :url_param_value => 'id',
                                                                            :url_param_name => 'config_class_id'} %>
+              <!--<%= render :partial =>"tree_sidebar", :locals =>{:tree_url => url_for(:controller => "com/config_classes", :action=>"get_class_tree",  :format=>:json),
+                                                                           :target_table => "config_items",
+                                                                           :tree_id => "tree-div",
+                                                                           :title => t(:label_com_config_class),
+                                                                           :root_text => t(:label_com_config_item_all_class),
+                                                                           :url_param_value => 'id',
+                                                                           :url_param_name => 'config_class_id'} %>  -->
             </td>
             <td>
               <table id="config_items_table" >
