--- a/app/views/irm/common/_tree_sidebar.html.erb
+++ b/app/views/irm/common/_tree_sidebar.html.erb
@@ -1,8 +1,11 @@
 <% require_javascript(:extjs) %>
 <% require_css(:extjs) %>
 <div id="tree-div" href="<%= tree_url %>">
-<% require_javascript(:extjs) %>
-<% require_css(:extjs) %>
+<script type="text/javascript">
+  $(function(){
+     alert("OK");
+  });
+</script>
 <script>
 Ext.onReady(function() {
     var treeNode = Ext.getDom("<%= tree_id%>");
@@ -32,7 +35,7 @@ Ext.onReady(function() {
         height: 300,
         root: {
             expanded: true,
-            text: '<%= root_text%>'
+            text: '<%= root_text %>'
         },
         listeners:{
             'itemclick':function(view, record, item, index, e){
