--- a/app/views/icm/incident_requests/index.html.erb
+++ b/app/views/icm/incident_requests/index.html.erb
@@ -1,49 +1,42 @@
 <%= common_title %>
 
 <% if allow_to_function?(:view_icm_kanban) %>
-<div class="toolbar">
-  <div class="button-group">
-    <div class="button selected"><%= link_to(content_tag(:img, "", {:src => "/images/s.gif", :class => "list-mode"}) + t(:list_mode), {}, {:href => "javascript:void(0)"})%></div>
-    <div class="button"><%= link_to(content_tag(:img, "", {:src => "/images/s.gif", :class => "preview-mode"}) + t(:kanban_mode), {:action=>"kanban_index"})%></div>
+  <div class="btn-toolbar">
+    <div class="btn-group">
+      <%= link_to(content_tag(:i, "", {:class => "icon-th-list"}) + t(:list_mode), {}, {:class=>"btn btn-mini active",:href => "javascript:void(0)"})%>
+      <%= link_to(content_tag(:i, "", {:class => "icon-th"}) + t(:kanban_mode), {:action=>"kanban_index"}, {:class=>"btn btn-mini"})%>
+    </div>
   </div>
-</div>
 <% end %>
 
 <%= view_filter("ICM_INCIDENT_REQUEST_INDEX_B","ICM_INCIDENT_REQUESTS","incident_requests") %>
 
 
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-          <div class="pbHeader">
-            <table cellpadding="0" cellspacing="0" border="0">
-              <tbody>
-                <tr>
-                  <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_icm_incident_request_list) %></h2></td>
-                  <td id="topButtonRow" class="pbButton">
-                    <div class="button"><%= link_to t(:new), {:action => "new"}%></div>
-                    <div class="button"><%= link_to t(:label_icm_incident_request_assign_me), {:action => "edit_assign_me"}%></div>
-                    <div class="button"><%= link_to t(:label_action_assign_dashboard), {:action => "assign_dashboard"}%></div>
-                    <div class="button" id="incidentRequestExport"><a href="javascript:void(0)"><%= t(:export) %></a></div>
-                  </td>
-                  <td class="pbHelp">
-                    <div id="incident_requestsSearchBox"></div>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        <% if Irm::Person.current.profile&&Irm::Person.current.profile.user_license.eql?("REQUESTER") %>
-          <%=render(:partial =>"customer_list") %>
-        <% else %>
-          <%=render(:partial =>"help_desk_list") %>
-        <% end %>
-    </div>
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_icm_incident_request_list) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:new), {:action => "new"},{:class=>"btn btn-primary"}%>
+      <%= link_to t(:label_icm_incident_request_assign_me), {:action => "edit_assign_me"},{:class=>"btn"}%>
+      <%= link_to t(:label_action_assign_dashboard), {:action => "assign_dashboard"},{:class=>"btn"}%>
+      <a href="javascript:void(0)" class="btn btn-info"><%= t(:export) %></a>
+    </td>
+    <td class="page-block-help">
+      <div id="incident_requestsSearchBox"></div>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <% if Irm::Person.current.profile&&Irm::Person.current.profile.user_license.eql?("REQUESTER") %>
+      <%=render(:partial =>"customer_list") %>
+    <% else %>
+      <%=render(:partial =>"help_desk_list") %>
+    <% end %>
+  </div>
 </div>
 
-<% #if allow_to_function?(:view_reports) %>
-
-<% #end %>
 
 <% content_for :sidebar do%>
-    <%= render :partial =>"/icm/incident_requests/short_cut_new" %>
+    <%= render :partial =>"/icm/incident_requests/quick_create" %>
 <% end %>
