修正事故回复页面

--- a/app/views/chm/change_incident_relations/_change_incident_requests.html.erb
+++ b/app/views/chm/change_incident_relations/_change_incident_requests.html.erb
@@ -1,7 +1,7 @@
 <% data_length = master_incident_request.present? ? datas.length+1 : datas.length %>
 <%= detail_data_table(data_length) do %>
   <!--  irm datatable      -->
-  <div class="irm-datatable">
+  <div   class="datatable">
     <div>
         <table>
           <thead>
