--- a/app/views/icm/incident_journals/_apply_skm.html.erb
+++ b/app/views/icm/incident_journals/_apply_skm.html.erb
@@ -1,5 +1,5 @@
   <div>
-    <div class="irm-datatable">
+    <div class="datatable">
         <table id='rows'>
           <thead>
             <tr >
