--- a/app/views/icm/incident_requests/_sidebar_relation_list.html.erb
+++ b/app/views/icm/incident_requests/_sidebar_relation_list.html.erb
@@ -1,17 +1,15 @@
-<% require_javascript(:extjs) %>
-<% require_css(:extjs) %>
 <%= form_tag({:controller => "icm/incident_requests", :action => "add_relation", :source_id => incident_request.id}, :remote => true) do |f| %>
-<div class="sidebarModule">
-    <div class="sidebarModuleHeader"><h2>
+<div class="sidebar-block">
+    <div class="sidebar-block-header"><h2>
       <%= t :label_icm_incident_request_relation %>
     </h2></div>
-    <div class="sidebarModuleBody">
+    <div class="sidebar-block-body">
         <table>
           <% if allow_to_function?(:edit_relation)  %>
           <tbody id="new_relation_form">
             <tr>
               <td>
-                <div id="relation_select" style="float:left;">
+                <div id="relation_select" class="form-inline">
                   <%= lov_field_tag "icm_relation", Icm::IncidentRequest, :style => "width:110px;" %>
                 </div>
 
@@ -21,11 +19,17 @@
             <!-- 关联的类别 -->
             <tr>
               <td>
-                <div id="relation_type" style="float: left;">
+                <div class="form-inline">
                   <%= t(:label_icm_incident_request_relation_type) %> <%= select_tag_alias(:relation_type,Irm::LookupValue.get_lookup_value("ICM_INCIDENT_REQUEST_REL_TYPE").collect{|p| [p[:meaning], p.lookup_code]}, nil) %>
                 </div>
-                <div class="float-right">
-                    <div class="button"><%= submit_tag(t(:add))%></div>
+
+              </td>
+            </tr>
+            <tr>
+              <td>
+
+                <div class="form-inline" style="text-align: right;">
+                  <%= link_submit t(:add),{:class=>"btn btn-primary"}%>
                 </div>
               </td>
             </tr>
@@ -38,39 +42,4 @@
 
     </div>
 </div>
-<% end %>
-
-<% unless limit_device? %>
-    <script type="text/javascript">
-      $(function(){
-          $('.request_info').each(function(){
-              var qtip = Ext.create('Ext.tip.ToolTip', {
-                          target: this,
-                          id: 'request-info-tip-' + $(this).attr('request_id'),
-                          anchor: 'left',
-                          title: "<a href='/incident_requests/" + $(this).attr('request_id') + "/journals/new'>" + $(this).attr('request_name') + "</a>",
-                          html: "<iframe frameborder=0 scrolling='no'  src='/incident_requests/" + $(this).attr('request_id') + "/info_card' style='width:100%;height:90px;'></iframe>",
-                          width: 400,
-                          autoHide: true,
-                          dismissDelay: 0,
-                          closable: false,
-                          listeners: {
-                            'afterrender': function(){
-                                this.el.on('mouseout', function(e){
-                                    if(!qtip.getChildByElement(this)){
-                                        qtip.hide();
-                                    }
-                                });
-
-                                this.el.on('mouseover', function(e){
-                                    qtip.suspendEvents();
-                                    qtip.show();
-                                });
-
-                            }
-                          }
-                      });
-          });
-      });
-    </script>
 <% end %>
